# iris_land

./: .gitignore  gains.txt
iris_land/: CMakeLists.txt  README.md  package.xml
iris_land/config/: gains.txt  stereo_camera_params_1280_480.yml  stereo_camera_params_1600_600.yml
iris_land/include/iris_land/: controllers.h  drone_control.cpp  drone_control.h  follow_controller.cpp  follow_controller.h  general.h  land_controller.cpp  land_controller.h  manager.cpp  manager.h  pidArchitectures.h  rosClient.cpp  ros_client.cpp  ros_client.h  state_machine.cpp  state_machine.h  tello_controllers.h
iris_land/launch/: joy.launch
iris_land/msg/: PDPI_controller.msg  PDPI_gain.msg  PD_controller.msg  PID_controller.msg  PI_controller.msg  controllers_gain.msg
iris_land/scripts/: aruco_node.cpp  aruco_node.py  aruco_rgb.py  aruco_test.py  aruco_tester.py  joy_node.py  parameters_node.py  read_bag_node.py  read_bag_pose.py  readme_aruco_node_.md  stereo_calibration.npz
iris_land/src/: aruco_node.py  aruco_stereo_v1landpad.cpp  drone_control.cpp  follow_controller.cpp  general.cpp  land_controller.cpp  manager.cpp  manager_node.cpp  rgb_stereo_aruco_detect.cpp  rgb_stereo_img_publisher.cpp  ros_client.cpp  state_machine.cpp
iris_land_msgs/: CMakeLists.txt  package.xml
iris_land_msgs/msg/: ControllersGain.msg  PDController.msg  PIController.msg  PIDController.msg
shell_script/: hex_run.sh  hex_run.yml  iris_sim.yml
