<?xml version="1.0"?>
<package format="2">
  <name>iris_land</name>
  <version>0.0.0</version>
  <description>The iris_land package</description>

  <maintainer email="ubuntu20@todo.todo">ubuntu20</maintainer>
  <license>TODO</license>

  <!-- Ferramenta de build -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependências de build e executáveis ROS -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- Novas dependências C++/OpenCV/ROS necessárias -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <!-- Exportar essas mesmas dependências para quem for construir contra este pacote -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <!-- Exportar runtime das novas dependências também -->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <!-- Dependências de execução (runtime) -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Novas dependências de execução -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <!-- Dependências para mensagens customizadas -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Se precisar adicionar algo específico aqui, coloque dentro de <export> -->
  </export>
</package>

