<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_land_msgs</name>
  <version>0.0.0</version>
  <description>Mensagens para o projeto Iris Land</description>
  <maintainer email="luciano.bj23@hotmail.com">lukn23</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências para mensagens -->
  <depend>std_msgs</depend>

  <!-- Dependências para testes -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Indica que é um pacote de mensagens ROS 2 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
